@@ -6,6 +6,7 @@ import java.time.LocalDateTime;
 import java.time.format.DateTimeFormatter;
 import java.util.Enumeration;
 import java.util.List;
+import java.util.Map;
 import javax.annotation.Resource;
 import org.slf4j.Logger;
 import org.slf4j.LoggerFactory;
@@ -14,7 +15,6 @@ import org.springframework.jdbc.core.JdbcTemplate;
 import org.springframework.scheduling.annotation.Scheduled;
 import com.stampede.changepwd.ChangepwdProperties;
 import com.stampede.changepwd.ChangepwdProperties.PersonJob;
-import com.stampede.changepwd.ChangepwdProperties.PersonJob.Time;
 import com.stampede.changepwd.domain.Person;
 
 /**
@@ -38,53 +38,71 @@ public class PersonJobService {
 		log.info("<<<自动创建LDAP账号定时任务已注册>>>");
 	}
 
-	@Scheduled(cron = "${changepwd.job.cron}", zone = "${spring.jackson.time-zone}")
-	public void createLdapAccountAndSendMail() {
-		LocalDateTime now = LocalDateTime.now();
-		PersonJob job = this.properties.getJob();
-		String hhmmss = now.format(DateTimeFormatter.ofPattern(job.getPattern()));
-		String yymmdd = now.format(DateTimeFormatter.ofPattern("yyyy-MM-dd"));
+	@Scheduled(cron = "${changepwd.first.cron}", zone = "${spring.jackson.time-zone}")
+	public void firstCreateLdapAccountAndSendMail() {
+		String yymmdd = LocalDateTime.now().format(DateTimeFormatter.ofPattern("yyyy-MM-dd"));
+		this.createLdapAccountAndSendMail(yymmdd, this.properties.getFirst());
+	}
+
+	@Scheduled(cron = "${changepwd.second.cron}", zone = "${spring.jackson.time-zone}")
+	public void secondCreateLdapAccountAndSendMail() {
+		String yymmdd = LocalDateTime.now().format(DateTimeFormatter.ofPattern("yyyy-MM-dd"));
+		this.createLdapAccountAndSendMail(yymmdd, this.properties.getSecond());
+	}
+
+	@Scheduled(cron = "${changepwd.third.cron}", zone = "${spring.jackson.time-zone}")
+	public void thirdCreateLdapAccountAndSendMail() {
+		String yymmdd = LocalDateTime.now().format(DateTimeFormatter.ofPattern("yyyy-MM-dd"));
+		this.createLdapAccountAndSendMail(yymmdd, this.properties.getThird());
+		this.delete(yymmdd);
+	}
+
+	private void createLdapAccountAndSendMail(String yymmdd, PersonJob job) {
 		String webPath = String.format("http://%s:%s%s", getHostAddress(), this.server.getPort(),
 				this.server.getServlet().getContextPath());
 		// 查询控股公司、主职、有效、入职、存在公司邮箱、当天的员工记录。
 		String sql = "SELECT to_char(u.user_id) AS user_id, u.user_name, u.comp_email FROM bdm_hr_user_job j INNER JOIN bdm_hr_user u ON j.user_id = u.user_id AND j.comp_id = u.comp_id WHERE j.comp_id = 26 AND j.post_rcd = 0 AND j.status = 1 AND j.action = 'HIR' AND u.comp_email IS NOT NULL AND j.create_time BETWEEN to_timestamp(?, 'yyyy-mm-dd hh24:mi:ss') AND to_timestamp(?, 'yyyy-mm-dd hh24:mi:ss')";
-		List<Time> times = job.getTimes();
-		times.stream().forEach(time -> {
-			if (time.getEnd().equals(hhmmss)) {
-				String begin = String.format("%s %s", yymmdd, time.getBegin());
-				String end = String.format("%s %s", yymmdd, time.getEnd());
-				log.info("开始时间={}, 结束时间={}", begin, end);
-				this.jdbcTemplate.queryForList(sql, begin, end).stream().forEach(map -> {
-					log.info("{}", map);
-					String uidNumber = map.get("USER_ID").toString();
-					String givenName = map.get("USER_NAME").toString();
-					String mail = map.get("COMP_EMAIL").toString();
-					String uid = mail.substring(0, mail.indexOf("@"));
-					if (this.personService.findByUsername(uid).isPresent()) {
-						log.warn("该uid={}已存在！", uid);
-					} else if (this.personService.findByUidNumber(uidNumber).isPresent()) {
-						log.warn("该uidNumber={}已存在！", uidNumber);
-					} else {
-						Person p = new Person(uid, givenName, "501", uidNumber, mail);
-						this.personService.sendMailForAdmin(p, webPath);
-						log.info("账号[{}]已创建，邮件已发至邮箱[{}]", uid, mail);
-					}
-				});
+		String begin = String.format("%s %s", yymmdd, job.getBegin());
+		String end = String.format("%s %s", yymmdd, job.getEnd());
+		log.info("开始时间={}, 结束时间={}", begin, end);
+		List<Map<String, Object>> list = this.jdbcTemplate.queryForList(sql, begin, end);
+		if (list.isEmpty()) {
+			log.info("没有查询到符合条件的记录。");
+			return;
+		}
+		list.stream().forEach(map -> {
+			log.info("{}", map);
+			String uidNumber = map.get("USER_ID").toString();
+			String givenName = map.get("USER_NAME").toString();
+			String mail = map.get("COMP_EMAIL").toString();
+			String uid = mail.substring(0, mail.indexOf("@"));
+			if (this.personService.findByUsername(uid).isPresent()) {
+				log.warn("该uid={}已存在！", uid);
+			} else if (this.personService.findByUidNumber(uidNumber).isPresent()) {
+				log.warn("该uidNumber={}已存在！", uidNumber);
+			} else {
+				Person p = new Person(uid, givenName, "501", uidNumber, mail);
+				this.personService.sendMailForAdmin(p, webPath);
+				log.info("账号[{}]已创建，邮件已发至邮箱[{}]", uid, mail);
 			}
 		});
-		Time last = times.get(times.size() - 1);
-		if (last.getEnd().equals(hhmmss)) {
-			String begin = String.format("%s %s", yymmdd, times.get(0).getBegin());
-			String end = String.format("%s %s", yymmdd, last.getEnd());
-			log.info("开始时间={}, 结束时间={}", begin, end);
-			// 查询控股公司、主职、无效、离职、当天的员工记录。
-			String sql2 = "SELECT to_char(u.user_id) AS user_id FROM bdm_hr_user_job j INNER JOIN bdm_hr_user u ON j.user_id = u.user_id AND j.comp_id = u.comp_id WHERE j.comp_id = 26 AND j.post_rcd = 0 AND j.status = 0 AND j.action = 'TER' AND j.create_time BETWEEN to_timestamp(?, 'yyyy-mm-dd hh24:mi:ss') AND to_timestamp(?, 'yyyy-mm-dd hh24:mi:ss')";
-			this.jdbcTemplate.queryForList(sql2, String.class, begin, end).stream()
-					.forEach(uid -> this.personService.findByUidNumber(uid).ifPresent(p -> {
-						this.personService.delete(p);
-						log.info("员工[{}]已离职，LDAP账号[{}]已删除", p.getUidNumber(), p.getUid());
-					}));
+	}
+
+	private void delete(String yymmdd) {
+		String begin = String.format("%s %s", yymmdd, this.properties.getFirst().getBegin());
+		String end = String.format("%s %s", yymmdd, this.properties.getThird().getEnd());
+		log.info("开始时间={}, 结束时间={}", begin, end);
+		// 查询控股公司、主职、无效、离职、当天的员工记录。
+		String sql = "SELECT to_char(u.user_id) AS user_id FROM bdm_hr_user_job j INNER JOIN bdm_hr_user u ON j.user_id = u.user_id AND j.comp_id = u.comp_id WHERE j.comp_id = 26 AND j.post_rcd = 0 AND j.status = 0 AND j.action = 'TER' AND j.create_time BETWEEN to_timestamp(?, 'yyyy-mm-dd hh24:mi:ss') AND to_timestamp(?, 'yyyy-mm-dd hh24:mi:ss')";
+		List<String> list = this.jdbcTemplate.queryForList(sql, String.class, begin, end);
+		if (list.isEmpty()) {
+			log.info("没有查询到符合条件的记录。");
+			return;
 		}
+		list.stream().forEach(uid -> this.personService.findByUidNumber(uid).ifPresent(p -> {
+			this.personService.delete(p);
+			log.info("员工[{}]已离职，LDAP账号[{}]已删除", p.getUidNumber(), p.getUid());
+		}));
 	}
 
 	/**
